--- a/Classly.csproj
+++ b/Classly.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MySqlConnector" Version="2.4.0" />
     <PackageReference Include="OpenAI" Version="2.5.0" />
     <PackageReference Include="Stripe.net" Version="49.0.0" />
