--- a/Classly.csproj
+++ b/Classly.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="MySqlConnector" Version="2.4.0" />
     <PackageReference Include="OpenAI" Version="2.5.0" />
     <PackageReference Include="Stripe.net" Version="49.0.0" />
